# at_protocol

./: .gitbook.yaml  .gitignore  CONTRIBUTING.md  README.md  SUMMARY.md  code_of_conduct.md
.github/workflows/: pymarkdownlnt.yml  scorecards.yml
decisions/: 2023-01-multiple-pkams.md  2023-01-pkam-per-app-and-device.md  2023-03-dart-naming-convention-for-releases.md  2023-07-dart-package-pinning.md  2023-07-github-issue-content.md  2023-11-remove-reverse-sshnp-client.md  2023-11-rename-sshrv(d).md  2024-02-Devices-per-atSign.md  2024-02-c99-minimum-version.md  2024-06-packages-depencency-update-interval.md  2024-07-apkam-key-conventions.md  2024-07-c-spec-conventions-1-to-7.md  2024-07-platform-sdks.md  2024-09-format-and-lint-tooling.md  2024-10-python-deprecation.md  2024-10-system-python-packages.md  README.md  decision-template.md
info/: license.md
specification/: at_protocol_specification.md
tools/: pymarkdownlnt.conf  pyproject.toml  requirements.txt
usage-examples/: how-notifications-work.md  how-to-exchange-encrypted-data.md
