[tool.poetry]
name = "at-protocol-tools"
version = "0.1.0"
description = ""
authors = ["Chris Swan <@cpswan>"]
readme = "README.md"
packages = [{include = "at_protocol_tools"}]

[tool.poetry.dependencies]
python = "^3.8"
pymarkdownlnt = "^0.9.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
